Fix scrollbar issue on larger screens

--- a/src/theme/page.scss
+++ b/src/theme/page.scss
@@ -1,11 +1,11 @@
 html {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     display: flex;
 }
 
@@ -13,7 +13,6 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 100%;
-    overflow: auto;
 
     @include media-breakpoint-only(xxxl) {
       max-width: 75vw;
